# icebook

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  release.yml
crates/icebook/: Cargo.toml
crates/icebook-example/: Cargo.toml  index.html
crates/icebook-example/src/: lib.rs  main.rs
crates/icebook/assets/: styles.css
crates/icebook/assets/fonts/noto_sans/: OFL.txt
crates/icebook/src/: app.rs  lib.rs  preferences.rs  routing.rs  sidebar.rs  story.rs  theme.rs
