[workspace]
members = ["crates/icebook"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/playtron-os/icebook"
authors = ["Playtron Team"]

[workspace.dependencies]
# Iced framework
iced = { version = "0.14", features = ["svg", "lazy"] }

# Utilities
tracing = "0.1"
once_cell = "1.19"

# WASM dependencies
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

# Proc macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
darling = "0.20"

[profile.release]
lto = true
opt-level = "s"
strip = true
