[package]
name = "icebook-example"
version = "0.1.0"
edition = "2021"
description = "Example storybook demonstrating icebook usage"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
icebook = { path = "../icebook" }
once_cell = "1.19"

# Platform-specific iced configuration
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { git = "ssh://git@github.com/playtron-os/iced.git", rev = "01cd767b", features = ["lazy"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { git = "ssh://git@github.com/playtron-os/iced.git", rev = "01cd767b", features = ["wgpu", "webgl", "lazy"] }
