[package]
name = "icebook-example"
version = "0.1.0"
edition = "2021"
description = "Example storybook demonstrating icebook usage"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
icebook = { path = "../icebook" }
once_cell = "1.19"

# Platform-specific iced configuration
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true }
